
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:theme="@style/myCustomToolBarTheme"
    tools:context="com.example.johnson.priceadvvisorbeta.MainActivity">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="400"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/contact"
        android:orderInCategory="300"
        android:title="@string/contact"
        android:icon="@drawable/ic_message"
        app:showAsAction="never" />
    <item
        android:id="@+id/watchup"
        android:orderInCategory="200"
        android:title="New WatchDog Post"
        android:icon="@drawable/ic_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/logut"
        android:orderInCategory="500"
        android:title="Log out"
        android:visible="true"
        android:icon="@drawable/ic_live_help"
        app:showAsAction="never" />
    <item android:id="@+id/item1"
        android:visible="true"
        android:title="@string/Add_New" >
    </item>

</menu>
