<!-- TODO: Update blank fragment layout
<TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:text="Account Section" />-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="false">



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:id="@+id/loginform"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">



            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shopping_bag_icon" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_account_circle"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="3"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_enhanced_encryption"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:stretchColumns="3">

                    <TableRow>

                        <Button
                            android:id="@+id/reg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bt_na"
                            android:padding="8dp"
                            android:clickable="true"
                            android:text="Create account here"
                            android:textColor="#17BEBB"
                            android:textSize="11dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/passwordRegM"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint=""
                            android:imeActionId="@+id/login"
                            android:imeActionLabel=""
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" />

                        <Button
                            android:id="@+id/forgot_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="18dp"
                            android:background="@drawable/bt_na"
                            android:padding="8dp"
                            android:clickable="true"
                            android:text="Forgot Password?"
                            android:textColor="#000000"
                            android:textSize="11dp"
                            android:textStyle="bold" />


                    </TableRow>

                </TableLayout>


            </LinearLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bt_bg"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:text="Login"
                android:textColor="#fff"
                android:textSize="13dp" />


        </LinearLayout>


    </LinearLayout>


</ScrollView>


